@@ -20,6 +20,8 @@
 
 package games.strategy.triplea.attatchments;
 
+import java.lang.reflect.Field;
+
 import games.strategy.engine.data.*;
 import games.strategy.engine.data.properties.GameProperties;
 import games.strategy.triplea.Constants;
@@ -582,6 +584,17 @@ public class UnitAttachment extends DefaultAttachment
     return m_blockade;
   }
   
+  public String getRawProperty(String property) {
+	  String s = "";
+	  try {
+		  Field field = getClass().getDeclaredField("m_"+property);
+		  field.setAccessible(true);
+		  s += field.get(this);
+	  }catch (Exception e) {
+		  throw new IllegalStateException("No such Property: m_" +property);
+	  }
+	  return s;
+  }
   public void validate(GameData data) throws GameParseException
   {
     if(m_isAir)
